--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,25 @@
-.App {
+.App{
   display: flex;
   flex-direction: column;
-  height: 90vh;
+  justify-items: center;
+  align-items: center;
+  margin: 150px
+}
+.time-sets{
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-
-.App h1 {
-  font-size: 4rem;
-  font-weight: bolder;
+h1{
+  text-align: center;
+  font-size: 5rem;
 }
-.interval-length-container {
+.dual-container{
   display: flex;
-}
-.interval-container {
-  display: flex;
-  flex: row;
-  margin: 0 20px;
-  justify-content: center;
+  flex-direction: row;
+  width: 70%;
+  justify-content: space-evenly;
+  justify-items: center;
   align-items: center;
-}
-button {
-  font-size: 1.5rem;
-  padding: 5px 12px;
-  margin: 0 10px;
-  height: 35px;
-  background-color: gray;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: whitesmoke;
-}
-.interval-length {
-  font-size: 2rem;
-}
-.title {
-  text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: -10px;
-}
-.timer-container{
-  border: 2px solid black;
-  margin-top: 40px;
-  border-radius: 25px;
-  width: 250px;
-  text-align: center;
-  height: 100px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.timer{
-  font-size: 2rem;
-}
-.timer-actions{
-  margin-top: 20px;
-  text-align: center;
 }
